--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,7 +122,7 @@ jobs:
       run: |
         brew install gcc@13
         python -m pip install --upgrade pip
-        pip install Cython matplotlib seaborn setuptools wheel delocate twine
+        pip install Cython matplotlib seaborn cibuildwheel twine
         pip install -r requirements.txt
         CC=gcc-13 CXX=g++-13 pip install .
     # - name: Install dependencies
@@ -137,23 +137,18 @@ jobs:
     #     cd tests
     #     python -m unittest
     #     cd .. 
-    # - name: Build with cibuildwheel
-    #   run: |
-    #     python -m cibuildwheel --output-dir wheelhouse
-    #     ls wheelhouse/
-    #   env:
-    #     # MACOSX_DEPLOYMENT_TARGET: "10.11"
-    #     CIBW_BEFORE_BUILD: "pip install numpy"
-    #     # CIBW_ARCHS_MACOS: x86_64
-    #     CIBW_BUILD: ${{ matrix.cibw-string }} 
-    #     CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} --require-target-macos-version 10.14 -w {dest_dir} -v {wheel}"
-    #     # CIBW_REPAIR_WHEEL_COMMAND: ""
-    #     CC: gcc-13
-    #     CXX: g++-13
-    - name: Build on GitHub runner
+    - name: Build with cibuildwheel
       run: |
-        CC=gcc-13 CXX=g++-13 python setup.py bdist_wheel
-        delocate-listdeps dist/*.whl && delocate-wheel --require-archs arm64 -w wheelhouse -v dist/*.whl
+        python -m cibuildwheel --output-dir wheelhouse
+        ls wheelhouse/
+      env:
+        MACOSX_DEPLOYMENT_TARGET: "10.14"
+        CIBW_BEFORE_BUILD: "pip install numpy"
+        # CIBW_ARCHS_MACOS: x86_64
+        CIBW_BUILD: ${{ matrix.cibw-string }} 
+        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} --require-target-macos-version 10.14 -w {dest_dir} -v {wheel}"
+        CC: gcc-13
+        CXX: g++-13
     - name: Upload with twine
       if: "contains(github.event.head_commit.message, 'PyPI')"
       run: |
