--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,11 +142,11 @@ jobs:
         python -m cibuildwheel --output-dir wheelhouse
         ls wheelhouse/
       env:
-        MACOSX_DEPLOYMENT_TARGET: "14"
+        # MACOSX_DEPLOYMENT_TARGET: "14"
         CIBW_BEFORE_BUILD: "pip install numpy delocate==0.10.7"
         # CIBW_ARCHS_MACOS: x86_64
         CIBW_BUILD: ${{ matrix.cibw-string }} 
-        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} --require-target-macos-version 10.14 -w {dest_dir} -v {wheel}"
+        CIBW_REPAIR_WHEEL_COMMAND: "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
         CC: gcc-13
         CXX: g++-13
     - name: Upload with twine
