--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ scipy>=1.10.0
 numpy>=1.24.1,<2.0.0
 scikit-learn>=1.2.0
 h5py>=3.7.0
-matplotlib>=3.6.3
-seaborn>=0.12.2
 tqdm>=4.64.1
 pandas>=1.5.2
+fastmat>=0.2.2.post0
+matplotlib>=3.6.3
+seaborn>=0.12.2
 julia>=0.6.0
