--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         CIBW_BUILD: ${{ matrix.cibw-string }}
         CIBW_SKIP: "*-musllinux_* *i686*"
     - name: Upload with twine
-      if: "contains(github.event.head_commit.message, 'PyPI')"
+      if: "github.ref == 'refs/heads/master' && contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
       env:
@@ -92,7 +92,7 @@ jobs:
         CIBW_BEFORE_BUILD: "pip install numpy"
         CIBW_BUILD: ${{ matrix.cibw-string }} 
     - name: Upload with twine
-      if: "contains(github.event.head_commit.message, 'PyPI')"
+      if: "github.ref == 'refs/heads/master' && contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
       env:
@@ -142,7 +142,7 @@ jobs:
         CC: gcc-13
         CXX: g++-13
     - name: Upload with twine
-      if: "contains(github.event.head_commit.message, 'PyPI')"
+      if: "github.ref == 'refs/heads/master' && contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
       env:
@@ -192,7 +192,7 @@ jobs:
         CC: gcc-13
         CXX: g++-13
     - name: Upload with twine
-      if: "contains(github.event.head_commit.message, 'PyPI')"
+      if: "github.ref == 'refs/heads/master' && contains(github.event.head_commit.message, 'PyPI')"
       run: |
         python -m twine upload wheelhouse/*.whl
       env:
